homework2/arbitrary_vector_add_hls_component/vector_add/logs/hls_run_csim_388425.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output /scratch/tsussman/arbitrary_vector_add_hls_component/vector_add/vector_add.hlsrun_csim_summary, at Fri Mar 27 12:53:26 2026
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir /scratch/tsussman/arbitrary_vector_add_hls_component/vector_add -config /scratch/tsussman/arbitrary_vector_add_hls_component/arbitrary_vector_add_hls_config.cfg -cmdlineconfig /scratch/tsussman/arbitrary_vector_add_hls_component/vector_add/hls/config.cmdline
INFO: [HLS 200-10] For user 'tsussman' on host 'login04.hep.wisc.edu' (Linux_x86_64 version 6.1.166-1.el9.elrepo.x86_64) on Fri Mar 27 12:53:33 CDT 2026
INFO: [HLS 200-10] On os "AlmaLinux release 9.7 (Moss Jungle Cat)"
INFO: [HLS 200-10] In directory '/scratch/tsussman/arbitrary_vector_add_hls_component'
INFO: [HLS 200-2005] Using work_dir /scratch/tsussman/arbitrary_vector_add_hls_component/vector_add 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/scratch/tsussman/homework2/aribtrary_vector_add.cpp' from /scratch/tsussman/arbitrary_vector_add_hls_component/arbitrary_vector_add_hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/scratch/tsussman/homework2/aribtrary_vector_add.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/scratch/tsussman/homework2/aribtrary_vector_add_tb.cpp' from /scratch/tsussman/arbitrary_vector_add_hls_component/arbitrary_vector_add_hls_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file '/scratch/tsussman/homework2/aribtrary_vector_add_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=vector_add' from /scratch/tsussman/arbitrary_vector_add_hls_component/arbitrary_vector_add_hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from /scratch/tsussman/arbitrary_vector_add_hls_component/arbitrary_vector_add_hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xcvu13p-fsga2577-2-e' from /scratch/tsussman/arbitrary_vector_add_hls_component/arbitrary_vector_add_hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xcvu13p-fsga2577-2-e'
INFO: [HLS 200-1465] Applying ini 'clock=25ns' from /scratch/tsussman/arbitrary_vector_add_hls_component/arbitrary_vector_add_hls_config.cfg(10)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 25ns.
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from /scratch/tsussman/arbitrary_vector_add_hls_component/arbitrary_vector_add_hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../homework2/aribtrary_vector_add_tb.cpp in debug mode
../../../../../homework2/aribtrary_vector_add_tb.cpp:23:2: error: no matching function for call to 'vector_add'
        vector_add(a,b,c);
        ^~~~~~~~~~
../../../../../homework2/aribtrary_vector_add_tb.cpp:9:6: note: candidate function not viable: no known conversion from 'in_d_t[100]' (aka 'ap_fixed<12, 6, AP_RND, AP_SAT>[100]') to 'out_d_t *' (aka 'ap_fixed<13, 7, AP_RND, AP_SAT> *') for 3rd argument
void vector_add(in_d_t a[SIZE], in_d_t b[SIZE], out_d_t c[SIZE]);
     ^
1 error generated.
make: *** [csim.mk:87: obj/aribtrary_vector_add_tb.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 11.28 seconds. Total CPU system time: 1.67 seconds. Total elapsed time: 12.62 seconds; peak allocated memory: 287.461 MB.
